# Project-Simurgh

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENT.md  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  Dockerfile.gateway  ETHICS.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.gateway.yml  package-lock.json  package.json  server.js
tools/agentdojo-simurgh-adapter/: README.md  pyproject.toml
tools/agentdojo-simurgh-adapter/simurgh_agentdojo_adapter/: agentdojo_register.py  authority_evidence.py  capability_kernel.py  defence.py  evidence_writer.py  friction_surface.py  intent_evidence.py  layer2_manifest.py  layer2_metrics.py  layer2_runner.py  layer2_sanitise.py  live_defence.py  manifest_surface.py  mapping.py  provenance_evidence.py  simurgh_client.py  stage1_live_runner.py  stage3i_error_taxonomy.py  stage3i_metrics.py  stage3j_full_runner.py  stage3j_manifest.py  stage3j_metrics.py  stage3j_suite_breakdown.py  stage3k_action_open.py  stage3k_catalogue.py  stage3k_manifest.py  stage3k_metrics.py  stage3k_mutations.py  stage3k_operator_breakdown.py  stage3k_runner.py  vdcc_surface.py
tools/agentdojo-simurgh-adapter/stage4d/: __init__.py  derivation.py  dispatch_controller.py  mediator.py  policy.py  run_fixture.py
tools/agentdojo-simurgh-adapter/stage4f/: __init__.py  build_suite_manifest.py  suite.py
tools/agentdojo-simurgh-adapter/stage4g/: __init__.py  build_library_manifest.py  library.py
tools/agentdojo-simurgh-adapter/tests/: _stage4o_helpers.py  stage3h_layer2_e2e_smoke.py  test_agentdojo_register.py  test_authority_evidence.py  test_capability_kernel.py  test_capability_kernel_equivalence.py  test_capability_kernel_friction.py  test_capability_kernel_intent.py  test_capability_kernel_manifest.py  test_capability_kernel_provenance.py  test_defence.py  test_evidence_writer.py  test_intent_evidence.py  test_layer2_manifest.py  test_layer2_metrics.py  test_layer2_runner.py  test_layer2_sanitise.py  test_live_defence.py  test_manifest_surface.py  test_mapping.py  test_provenance_evidence.py  test_simurgh_client.py  test_stage3i_context_calibration.py  test_stage3i_metrics.py  (+20 more)
tools/simurgh-daemon-linux/: Cargo.toml  README.md
(+6703 files in other folders)
