[package]
name = "simurgh-daemon-linux"
version = "2.8.0"
edition = "2021"
description = "Project Simurgh Linux Device Shield daemon — research prototype."
license = "MIT"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
sha2 = "0.10"
base64 = "0.22"
hyper = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["limit", "cors"] }
anyhow = "1"
thiserror = "1"
