[package]
name = "simurgh-daemon-linux"
version = "2.8.0"
edition = "2021"
description = "Project Simurgh Linux Device Shield daemon — research prototype."
license = "MIT"

[lib]
name = "simurgh_daemon_linux"
path = "src/lib.rs"

[[bin]]
name = "simurgh-daemon-linux"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
sha2 = "0.10"
base64 = "0.22"
hyper = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["limit", "cors"] }
anyhow = "1"
thiserror = "1"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
x11rb = { version = "0.13", default-features = false, features = [] }

[dev-dependencies]
http-body-util = "0.1"
